--- a/client/public/project3/index.html
+++ b/client/public/project3/index.html
@@ -60,7 +60,7 @@
         <p>
           中央大學統計研究所畢業，在鴻海和台積電累積五年數據分析/系統後端開發工作經驗，對寫程式和數據分析相關工作有熱忱。
         </p>
-        <p>我的主要技能是Node.js/Express.js/Python/R/html/css/React/Nginx/Golang/Machine Learning</p>
+        <p>我的主要技能是Node.js/Express.js/Python/R/html/css/React/Nginx/Golang/Machine Learning/git</p>
         <div class="progressbar-area">
           <p>R</p>
           <div class="progress">
